--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Xavier Druhan's portfolio</title>
+  <title>Xavier's Wonderful Website</title>
 
   <!-- slider stylesheet -->
   <!-- slider stylesheet -->
@@ -37,7 +37,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
           <a class="navbar-brand" href="index.html">
             <span>
-              Xavier Druhan's Secondary 3 portfolio
+              Xavier Druhan's portfolio
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +60,7 @@
                   <a class="nav-link" href="portfolio.html"> Portfolio </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact us</a>
+                  <a class="nav-link" href="contact.html">Contact me</a>
                 </li>
               </ul>
               <div class="user_option">
@@ -97,11 +97,10 @@
 
                       </h2>
                       <h1>
-                        web agency
+                        My Ican career in a website
                       </h1>
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
+                        I have multiple skills in iCan, including building bat houses, coding and programming java, python, and scratch. 
                       </p>
                       <div class="">
                         <a href="">
