--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   <a class="nav-link" href="about.html"> About </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="do.html"> What we do </a>
+                  <a class="nav-link" href="do.html"> What I've done as an Ican Student </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="portfolio.html"> Portfolio </a>
@@ -144,20 +144,6 @@
                   <div class="detail-box">
                     <div>
                       <h2>
-                        welcome to
-
-                      </h2>
-                      <h1>
-                        web agency
-                      </h1>
-                      <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                      </p>
-                      <div class="">
-                        <a href="">
-                          Contact us
-                        </a>
                       </div>
                     </div>
                   </div>
