--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      &copy; 2020 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
+      &copy; 2024 All Rights Reserved By
+      <a href="https://html.design/"</Villium Inc.</a>
     </p>
   </section>
   <!-- footer section -->
