--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      &copy; 2024 All Rights Reserved By
-      <a href="https://html.design/"</Villium Inc.</a>
+      &copy; 2024 All Rights Reserved By Villium Inc.
     </p>
   </section>
   <!-- footer section -->
