--- a/index.html
+++ b/index.html
@@ -40,9 +40,6 @@
               Xavier Druhan's portfolio
             </span>
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
@@ -51,16 +48,16 @@
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About </a>
+                  <a class="nav-link" href="about.html"> About Me </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="do.html"> What I've done as an Ican Student </a>
+                  <a class="nav-link" href="do.html"> Who's helped me learn all i know </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="portfolio.html"> Portfolio </a>
+                  <a class="nav-link" href="portfolio.html"> Coding </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact me</a>
+                  <a class="nav-link" href="contact.html">Digital Arts</a>
                 </li>
               </ul>
               <div class="user_option">
@@ -87,7 +84,7 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner">
-            <div class="carousel-item active">
+            <d/iv class="carousel-item active">
               <div class="row">
                 <div class="col">
                   <div class="detail-box">
@@ -100,50 +97,14 @@
                         My Ican career in a website
                       </h1>
                       <p>
-                        I have multiple skills in iCan, including building bat houses, coding and programming java, python, and scratch. 
+                        A deep dive on my high school career
   </section>
   </section>
   </section>
-
-
-  <!-- end contact section -->
-  <!-- end info_section -->
-
-
-  <!-- footer section -->
-  <section class="container-fluid footer_section">
-    <p>
-      &copy; 2024 All Rights Reserved By Villium Inc.
-    </p>
-  </section>
-  <!-- footer section -->
-
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
   </script>
-  <!-- owl carousel script 
-    -->
-  <script type="text/javascript">
-    $(".owl-carousel").owlCarousel({
-      loop: true,
-      margin: 0,
-      navText: [],
-      center: true,
-      autoplay: true,
-      autoplayHoverPause: true,
-      responsive: {
-        0: {
-          items: 1
-        },
-        1000: {
-          items: 3
-        }
-      }
-    });
-  </script>
-  <!-- end owl carousel script -->
-
 </body>
 
 </html>
