--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Esigned</title>
+  <title>About me, Xavier</title>
 
   <!-- slider stylesheet -->
   <!-- slider stylesheet -->
@@ -51,16 +51,16 @@
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About </a>
+                  <a class="nav-link" href="about.html"> About Me </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="do.html"> What we do </a>
+                  <a class="nav-link" href="do.html"> Who helped me </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="portfolio.html"> Portfolio </a>
+                  <a class="nav-link" href="portfolio.html"> Coding </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact us</a>
+                  <a class="nav-link" href="contact.html">Digital Arts</a>
                 </li>
               </ul>
               <div class="user_option">
@@ -94,14 +94,15 @@
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                WHO WE ARE?
+                WHO AM I?
               </h2>
             </div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrudLorem ipsum dolor sit amet, consectetur
-              adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud
+            My name is Xavier Druhan. I am a funny, very handsome iCan student who has a passion for video games and coding.
+            I am currently 14 years old, and I started coding during Covid-19, using minecraft education edition
+            to create cool effects in game. In this portfolio, i will talk about my two favorite parts of iCan:
+            1. Coding (python, greenfoot, wolfram, java)
+            2. Digital Arts (photoshop, inDesign, after effects
             </p>
             <div>
               <a href="">
