--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
       <div class="row">
         <div class="col-md-5">
           <div class="img-box">
-            <img src="images/who-img.jpg" alt="">
+            <img src="mexavier.jpg" alt="">
           </div>
         </div>
         <div class="col-md-7">
