--- a/do.html
+++ b/do.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Esigned</title>
+  <title>My teachers</title>
 
   <!-- slider stylesheet -->
   <!-- slider stylesheet -->
@@ -37,7 +37,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
           <a class="navbar-brand" href="index.html">
             <span>
-              Esigned
+              My teachers
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -85,11 +85,14 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          What we do
+          My teachers
         </h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna
+        I have 3 teachers who really taught me the most about iCan, and who i was as a person. The first being Mr. Nadeau. He is a very funny,
+        funny person who is quite good at teaching how to work Greenfoot and all about coding. My favorite thing ive done with him is a GUI calculator, shown at the bottom.
+        second teacher that changed me as a person is mr swift. He is a good teacher who is quite experienced in programs like photoshop. The third teacher i enjoy is ms. mir.
+        Her teaching style is dynamic and interesting, and makes me learn something new every class. I love using Wolfram Mathematica and binary coding. Also, an honorable
+        mention to mr. Larouche, the final boss of all teachers. He has by far some of the most interesting projects, going from a 3D building game to creating a github website.
         </p>
       </div>
       <div class="do_container">
