--- a/do.html
+++ b/do.html
@@ -51,16 +51,16 @@
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About </a>
+                  <a class="nav-link" href="about.html"> About me</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="do.html"> What we do </a>
+                  <a class="nav-link" href="do.html"> Who helped me </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="portfolio.html"> Portfolio </a>
+                  <a class="nav-link" href="portfolio.html"> Coding </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact us</a>
+                  <a class="nav-link" href="contact.html">Digital Arts</a>
                 </li>
               </ul>
               <div class="user_option">
