--- a/do.html
+++ b/do.html
@@ -98,21 +98,21 @@
       <div class="do_container">
         <div class="box arrow-start arrow_bg">
           <div class="img-box">
-            <img src="images/d-1.png" alt="">
+            <img src="images/happyhalloweenmsmir.png" alt="">
           </div>
           <div class="detail-box">
             <h6>
-              Marketing
+              Ms mir work
             </h6>
           </div>
         </div>
         <div class="box arrow-middle arrow_bg">
           <div class="img-box">
-            <img src="images/d-2.png" alt="">
+            <img src="images/low_ply_hammer.png" alt="">
           </div>
           <div class="detail-box">
             <h6>
-              Development
+              Mr. Swift work
             </h6>
           </div>
         </div>
