--- a/do.html
+++ b/do.html
@@ -118,11 +118,11 @@
         </div>
         <div class="box arrow-middle arrow_bg">
           <div class="img-box">
-            <img src="images/d-3.png" alt="">
+            <img src="images/Dog house mr larouche.png" alt="">
           </div>
           <div class="detail-box">
             <h6>
-              Html5
+              Mr.larouche work
             </h6>
           </div>
         </div>
