--- a/do.html
+++ b/do.html
@@ -128,21 +128,11 @@
         </div>
         <div class="box arrow-end arrow_bg">
           <div class="img-box">
-            <img src="images/d-4.png" alt="">
+            <img src="guicalculator.png" alt="">
           </div>
           <div class="detail-box">
             <h6>
-              Css
-            </h6>
-          </div>
-        </div>
-        <div class="box ">
-          <div class="img-box">
-            <img src="images/d-5.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h6>
-              Wordpress
+              Mr. nadeau work
             </h6>
           </div>
         </div>
