--- a/portfolio.html
+++ b/portfolio.html
@@ -89,6 +89,7 @@
         </h2>
         <p>
           I have done multiple coding projects throughout my ican career, using wolfram, and Visual Studio code.
+          The first three are python works, and the last 2 are WolfRam works.
         </p>
       </div>
       <div class="work_container layout_padding2">
