--- a/portfolio.html
+++ b/portfolio.html
@@ -94,18 +94,18 @@
       </div>
       <div class="work_container layout_padding2">
         <div class="box b-1">
-          <img src="images/w-1.png" alt="">
+          <img src="VScode2" alt="">
         </div>
         <div class="box b-2">
-          <img src="images/w-2.png" alt="">
+          <img src="VScode3.png" alt="">
 
         </div>
         <div class="box b-3">
-          <img src="images/w-3.png" alt="">
+          <img src="happyhalloweenmsmir.png" alt="">
 
         </div>
         <div class="box b-4">
-          <img src="images/w-4.png" alt="">
+          <img src="Wolfram1.png" alt="">
 
         </div>
       </div>
