--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
                   <a class="nav-link" href="portfolio.html"> Coding </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html"> Visual Arts</a>
+                  <a class="nav-link" href="contact.html"> Digital Arts</a>
                 </li>
               </ul>
               <div class="user_option">
@@ -89,7 +89,7 @@
         </h2>
         <p>
           I have done multiple coding projects throughout my ican career, using wolfram, and Visual Studio code.
-          The first three are python works, and the last 2 are WolfRam works.
+          The first one is python works, and the last 2 are Wolfram works.
         </p>
       </div>
       <div class="work_container layout_padding2">
