--- a/portfolio.html
+++ b/portfolio.html
@@ -89,12 +89,13 @@
         </h2>
         <p>
           I have done multiple coding projects throughout my ican career, using wolfram, and Visual Studio code.
-          The first one is python works, and the last 2 are Wolfram works.
+          The first two is python IDLE wworks, and the last 2 are Wolfram works. Coding is my favorite part of iCan,
+          and is very interesting.
         </p>
       </div>
       <div class="work_container layout_padding2">
         <div class="box b-1">
-          <img src="VScode2" alt="">
+          <img src="VScode2.png" alt="">
         </div>
         <div class="box b-2">
           <img src="VScode3.png" alt="">
