--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   <a class="nav-link" href="about.html"> About Me </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="do.html"> Who's helped me learn all i know </a>
+                  <a class="nav-link" href="do.html"> My teachers </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="portfolio.html"> Coding </a>
