--- a/do.html
+++ b/do.html
@@ -54,7 +54,7 @@
                   <a class="nav-link" href="about.html"> About me</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="do.html"> Who helped me </a>
+                  <a class="nav-link" href="do.html"> My teachers </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="portfolio.html"> Coding </a>
