--- a/do.html
+++ b/do.html
@@ -98,7 +98,7 @@
       <div class="do_container">
         <div class="box arrow-start arrow_bg">
           <div class="img-box">
-            <img src="images/happyhalloweenmsmir.png" alt="">
+            <img src="happyhalloweenmsmir.png" alt="">
           </div>
           <div class="detail-box">
             <h6>
@@ -108,7 +108,7 @@
         </div>
         <div class="box arrow-middle arrow_bg">
           <div class="img-box">
-            <img src="images/low_ply_hammer.png" alt="">
+            <img src="low_poly_hammer.png" alt="">
           </div>
           <div class="detail-box">
             <h6>
@@ -118,7 +118,7 @@
         </div>
         <div class="box arrow-middle arrow_bg">
           <div class="img-box">
-            <img src="images/Dog house mr larouche.png" alt="">
+            <img src="Dog house mr larouche.png" alt="">
           </div>
           <div class="detail-box">
             <h6>
