--- a/contact.html
+++ b/contact.html
@@ -88,9 +88,14 @@
         <h2>
           Some Visual Arts Projects
         </h2>
-        <img src="low_poly_hammer.png" alt="">
-        <img src="thering.png" alt="">
-        <img src="Archer.png" alt="">
+        <img src="github/low_poly_hammer.png" alt="">
+        <div>
+        <img src="github/thering.png" alt="">
+        </div>
+        <img src="github/Archer.png" alt="">
+      </div>
+    </div>
+  </section>
   <!-- end contact section -->
 
 </body>
