--- a/portfolio.html
+++ b/portfolio.html
@@ -88,8 +88,8 @@
           Coding
         </h2>
         <p>
-          I have done multiple coding projects throughout my ican career, using wolfram, and Visual Studio code.
-          The first two is python IDLE wworks, and the last 2 are Wolfram works. Coding is my favorite part of iCan,
+          I have done multiple coding projects throughout my ican career, including Greenfoot, bridge and
+          Coding is my favorite part of iCan,
           and is very interesting.
         </p>
       </div>
@@ -108,6 +108,11 @@
         <div class="box b-4">
           <img src="Wolfram1.png" alt="">
 
+        </div>
+        <div class="box b-4">
+          <img src=".png" alt="">
+          
+        </div>
         </div>
       </div>
     </div>
