--- a/portfolio.html
+++ b/portfolio.html
@@ -110,7 +110,11 @@
 
         </div>
         <div class="box b-4">
-          <img src=".png" alt="">
+          <img src="Code.png" alt="">
+          
+        </div>
+                <div class="box b-4">
+          <img src="image_2025-04-15_153414420.png" alt="">
           
         </div>
         </div>
