--- a/contact.html
+++ b/contact.html
@@ -94,6 +94,10 @@
         </div>
         <img src="github/Archer.png" alt="">
       </div>
+        <img src="github/ArtPicInventor.png" alt="">
+      </div>
+        <img src="github/OrcaSlicer.png" alt="">
+      </div>
     </div>
   </section>
   <!-- end contact section -->
