--- a/portfolio.html
+++ b/portfolio.html
@@ -111,11 +111,9 @@
         </div>
         <div class="box b-4">
           <img src="Code.png" alt="">
-          
-        </div>
-                <div class="box b-4">
-          <img src="image_2025-04-15_153414420.png" alt="">
-          
+                  <p>
+          This is a "Frogger" copy I did on Greenfoot.
+        </p>
         </div>
         </div>
       </div>
