--- a/portfolio.html
+++ b/portfolio.html
@@ -112,7 +112,8 @@
         <div class="box b-4">
           <img src="Code.png" alt="">
                   <p>
-          This is a "Frogger" copy I did on Greenfoot.
+                    This is a "Frogger" copy 
+                    I did on Greenfoot.
         </p>
         </div>
         </div>
