--- a/contact.html
+++ b/contact.html
@@ -94,9 +94,9 @@
         </div>
         <img src="github/Archer.png" alt="">
       </div>
-        <img src="github/ArtPicInventor.png" alt="">
+        <img src="ArtPicInventor.png" alt="">
       </div>
-        <img src="github/OrcaSlicer.png" alt="">
+        <img src="OrcaSlicer.pn" alt="">
       </div>
     </div>
   </section>
