--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,10 @@
       </div>
         <img src="ArtPicInventor.png" alt="">
       </div>
-        <img src="OrcaSlicer.pn" alt="">
+        <img src="OrcaSlicer.png" alt="">
+      </div>
+      </div>
+        <img src="rotatelinkage.png" alt="">
       </div>
     </div>
   </section>
