--- a/portfolio.html
+++ b/portfolio.html
@@ -103,17 +103,21 @@
         </div>
         <div class="box b-3">
           <img src="happyhalloweenmsmir.png" alt="">
+          <p>
+            This is a pumpkin i made in Ms. Mir's class for Haloween
+          </p>
 
         </div>
         <div class="box b-4">
           <img src="Wolfram1.png" alt="">
-
+          <p>
+            This is a 3D solar system model i made with ms.Mir
+          </p>
         </div>
         <div class="box b-4">
           <img src="Code.png" alt="">
                   <p>
-                    This is a "Frogger" copy 
-                    I did on Greenfoot.
+                    This is a "Frogger" copy I did on Greenfoot.
         </p>
         </div>
         </div>
