--- a/contact.html
+++ b/contact.html
@@ -89,17 +89,35 @@
           Some Visual Arts Projects
         </h2>
         <img src="github/low_poly_hammer.png" alt="">
+          <p>
+            this is a hammer I made for Mr. Swift
+          </p>
         <div>
         <img src="github/thering.png" alt="">
+          <p>
+            this is a map and 3D model of The Ring from lord of the rings.
+          </p>
         </div>
         <img src="github/Archer.png" alt="">
+         <p>
+           This is a card i made for a card game i created.
+         </p>
       </div>
         <img src="ArtPicInventor.png" alt="">
+          <p>
+            This is a piece for a Reciprocator i made for Mr. Brady.
+          </p>
       </div>
         <img src="OrcaSlicer.png" alt="">
+          <p>
+            This is a long project i did for Mr. Larouche, in which i made a fin for a pepsi bottle
+          </p>
       </div>
       </div>
         <img src="rotatelinkage.png" alt="">
+          <p>
+            This is another part i created for mr. Brady
+          </p>
       </div>
     </div>
   </section>
