--- a/portfolio.html
+++ b/portfolio.html
@@ -93,33 +93,33 @@
           and is very interesting.
         </p>
       </div>
-      <div class="work_container layout_padding2">
-        <div class="box b-1">
           <img src="VScode2.png" alt="">
         </div>
-        <div class="box b-2">
-          <img src="VScode3.png" alt="">
-
+        <p>
+          This is a calculator i made for Mr. Nadeau.
+        </p>
         </div>
-        <div class="box b-3">
+            <img src="VScode3.png" alt="">
+        </div>
+        <p>
+          This is a timer i made in Mr. Nadeau's class.
+        </p>
           <img src="happyhalloweenmsmir.png" alt="">
+        </div> 
           <p>
             This is a pumpkin i made in Ms. Mir's class for Haloween
           </p>
-
         </div>
-        <div class="box b-4">
           <img src="Wolfram1.png" alt="">
           <p>
             This is a 3D solar system model i made with ms.Mir
           </p>
         </div>
-        <div class="box b-4">
           <img src="Code.png" alt="">
-                  <p>
-                    This is a "Frogger" copy I did on Greenfoot.
-        </p>
-        </div>
+            <p>
+              This is a "Frogger" copy I did on Greenfoot.
+            </p>
+          </div>
         </div>
       </div>
     </div>
