--- a/portfolio.html
+++ b/portfolio.html
@@ -119,6 +119,12 @@
             <p>
               This is a "Frogger" copy I did on Greenfoot.
             </p>
+            </div>
+          <mp3 src="" alt="GorillaWakesddSpeech.mp3">
+            <p>
+              This is a recording of a project we did in mr swift class as part of the "one hour challenge".
+              We made it in capcut and it was truly incredibly fun.
+            </p>
           </div>
         </div>
       </div>
